fix admin invoice paid override
